--- a/incognitowl.html
+++ b/incognitowl.html
@@ -26,6 +26,7 @@
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
 		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
