--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
 				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
 		      </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
@@ -156,7 +157,7 @@
 	      </div>
 		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
 			<p>Role: Project Lead/Designer/Programmer</p>
-			<p>Developed In: Unity</p>
+			<p>Developed In: Unity (C#)</p>
 			<p>Take to the tracks in this high-speed action platformer, looting 
 			a moving train in an attempt to pull off the biggest heist the Wild 
 			West has ever seen!</p>
@@ -188,6 +189,53 @@
 	      <div class ="col-md-12 text-center">
 			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
 			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
+	      </div>
+	    </div>
+		
+	   </div>
+      </div>
+    </div>
+	
+	<div class = "neighborhood-guides">
+        <div class="container">
+            <div class ="row">
+				<div class ="col-md-12 text-center" id="title"><img src="images/HYPE.png"></div>
+        <div class ="row">
+		  <div class ="col-md-1"></div>
+	      <div class ="col-md-5">
+			<div class="thumbnail">
+                <img src="images/hypetrain_page.png">
+            </div>
+	      </div>
+		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
+			<p>Role: Lead Designer/Writer</p>
+			<p>Developed In: Unity (C#)</p>
+			<p>Two lovestruck cats are about to enter a long-distance
+			relationship, and the pesky phone bills aren't cheap. Earn
+			money through a series of odd jobs to try and make things 
+			work in this heart-wrenching short story-game.</p>
+		  </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row">
+		  <div class ="col-md-1"></div>
+		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
+				<p>What Do We Do Meow was a game developed at the 2015 Global
+				Game Jam.</p>
+		  </div>
+		  <div class ="col-md-3">
+			<div class="thumbnail">
+                <a href="http://ursamajorgames.com"><img src="images/ursa_logo_trans.png"></a>
+            </div>
+	      </div>
+		  <div class ="col-md-1"></div>
+	    </div>
+		
+		<div class ="row" id="checkbuttons">
+	      <div class ="col-md-12 text-center">
+			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download (Windows)</a>
+			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download (Mac)</a>
 	      </div>
 	    </div>
 		
