--- a/wdwd-meow.html
+++ b/wdwd-meow.html
@@ -48,11 +48,12 @@
             </div>
 	      </div>
 		  <div class ="col-md-5" id="gametext" style="padding-top:20px">
-			<p>Role: Project Lead/Designer/Programmer</p>
+			<p>Role: Lead Designer/Writer</p>
 			<p>Developed In: Unity (C#)</p>
-			<p>Take to the tracks in this high-speed action platformer, looting 
-			a moving train in an attempt to pull off the biggest heist the Wild 
-			West has ever seen!</p>
+			<p>Two lovestruck cats are about to enter a long-distance
+			relationship, and the pesky phone bills aren't cheap. Earn
+			money through a series of odd jobs to try and make things 
+			work in this heart-wrenching short story-game.</p>
 		  </div>
 		  <div class ="col-md-1"></div>
 	    </div>
@@ -60,14 +61,8 @@
 		<div class ="row">
 		  <div class ="col-md-1"></div>
 		  <div class ="col-md-7" id="gametext" style="padding-top:10px">
-				<p>Project HYPETRAIN is a game currently being developed by 
-				the student startup studio I founded, Ursa Major Games. Whenever
-				we get a break from school, jobs, and the general craziness
-				of college, we pour our hearts into this game. Project HYPETRAIN
-				has the biggest team, as well as development cycle, I have ever
-				experienced. The result? A ton of leadership, design, and Unity 
-				experience, along with a badass train heist game that'll be sure
-				to get the HYPE flowing through your veins! Try it out!</p>
+				<p>What Do We Do Meow was a game developed at the 2015 Global
+				Game Jam.</p>
 		  </div>
 		  <div class ="col-md-3">
 			<div class="thumbnail">
@@ -79,8 +74,8 @@
 		
 		<div class ="row" id="checkbuttons">
 	      <div class ="col-md-12 text-center">
-			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download Alpha (Windows)</a>
-			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download Alpha (Mac)</a>
+			<a href="downloads/HYPETRAINalpha-up(Win).zip" class="btn btn-custom">Download (Windows)</a>
+			<a href="downloads/HYPETRAINalpha-up(Mac).zip" class="btn btn-custom">Download (Mac)</a>
 	      </div>
 	    </div>
 		
