--- a/incognitowl.html
+++ b/incognitowl.html
@@ -25,9 +25,10 @@
               <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
-				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
-				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
-		      </ul>
+				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				    <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
+                <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
+		        </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
