--- a/krabklashers.html
+++ b/krabklashers.html
@@ -25,9 +25,10 @@
               <ul class="dropdown-menu pull-right" role="menu">
                 <li><a href="http://haydenplatt.me/incognitowl">Incognitowl</a></li>
                 <li><a href="http://haydenplatt.me/dreamlock">Dreamlock</a></li>
-				<li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
-				<li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
-		      </ul>
+				    <li><a href="http://haydenplatt.me/hypetrain">Project HYPETRAIN</a></li>
+				    <li><a href="http://haydenplatt.me/wdwd-meow">What Do We Do Meow?</a></li>
+                <li><a href="http://haydenplatt.me/krabklashers">KrabKlashers</a></li>
+		        </ul>
 		  </li>
 		  <li id="social" style="padding-left:20px"><a href="http://twitter.com/hayden_platt"><img src="images/twitter_logo.png"></a></li>
 		  <li id="social"><a href="http://linkedin.com/in/haydenplatt"><img src="images/linkedin_logo.png"></a></li>
@@ -66,7 +67,7 @@
 		  <div class ="col-md-6" id="gametext" style="padding-top:10px">
 				<p>Krab Klashers was a game developed in a software 
 				engineering class at UCSC, utilizing a Scrum development 
-				methodolgy. Our goal for the project is to familiarize 
+				methodolgy. Our goal for the project was to familiarize 
 				ourselves with 3D and multiplayer game production, as it 
 				is a foreign field for all of us. We chose to keep the
 				game's mechanics relatively simple, yet still fun. By
